css3-style-added

--- a/exercicio data e hora/exercicios.html
+++ b/exercicio data e hora/exercicios.html
@@ -12,11 +12,13 @@
   
   <input type="button" id="botao" value="mostrar" onclick="Mostrar()">
   
-  <h1>Hora:</h1>
-  <h2 id="horatxt"></h2>
-  
-  <h2>Dia:</h2>
-  <h2 id="diatxt" ></h2>
+  <div>
+    <h1>Hora:</h1>
+    <h2 id="horatxt"></h2>
+    
+    <h2>Dia:</h2>
+    <h2 id="diatxt" ></h2>
+  </div>
   
 
   <script src="javascript.js"></script>
